Revision history  {{$dist->name}}

{{$NEXT}}
  - Move to Starter::Git revision 5

2.113     2020-01-16
  - Get rid of use of Common and TBone in all tests
  - Convert to Dist::Zilla for authoring
  - Cleaned up some of the docs. Needs more.

2.112    2019-12-13
  - Added the change log from any prior source that could be found. Formatted
    the log to fit metacpan.org loose standards.
  - Added .mailmap to correctly attribute all commits to Dianne Skoll when
    using: git shortlog -s -e
  - Added .gitattributes and .gitignore to assist with keeping the repo clean
  - Change use vars qw() to our $whatever instead. 'our'
  - Hide IO::WrapTie subclasses from PAUSE
  - Rebuild Makefile.PL to contain all of the prerequisites. Make use of the
    stub from Dist::Zilla
  - Convert README to README.md
  - Fix the documentation in the main module, IO::Stringy to better indicate
    where to get info and how to use the module
  - Fix the dist's META information to indicate the original author and license
  - Add a LICENSE file
  - Get rid of the set-version.pl file as it's no longer needed
  - Add AppVeyor CI testing
  - Add Travis CI testing
  - update t/IO_InnerFile.t to use Test::More and a proper TEMP file (RT #103895)

2.111    2015-04-22
  - Update maintainer's name, which is now Dianne Skoll.

2.110    2005-02-10
  - Maintainership taken over by DSKOLL <dfs@roaringpenguin.com>
  - RT 2208 IO::ScalarArray->getline does not return undef for EOF if
    undef($/)
  - RT 7132 IO-stringy/Makefile.PL bug - name should be module name
  - RT 11249 IO::Scalar flush shouldn't return undef
  - RT 2172 $\ (output record separator) not respected
  - RT 8605 IO::InnerFile::seek() should return 1 on success
  - RT 4798 *.html in lib/

2.109    2003-12-21
  - IO::Scalar::getline now works with ref to int. *Dominique Quatravaux*
  - RT 4369 Improvement: handling of fixed-size reads in IO::Scalar

2.108    2001-08-20
  - The terms-of-use have been placed in the distribution file