@@ -4,7 +4,7 @@
       "Erik Dorfman <eryq@cpan.org>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Zilla version 6.024, CPAN::Meta::Converter version 2.150010",
+   "generated_by" : "Dist::Zilla version 6.029, CPAN::Meta::Converter version 2.150010",
    "license" : [
       "perl_5"
    ],
@@ -24,11 +24,6 @@
       ]
    },
    "prereqs" : {
-      "build" : {
-         "requires" : {
-            "ExtUtils::MakeMaker" : "0"
-         }
-      },
       "configure" : {
          "requires" : {
             "ExtUtils::MakeMaker" : "0"
@@ -36,35 +31,28 @@
       },
       "develop" : {
          "requires" : {
-            "Dist::Zilla" : "0",
             "File::Spec" : "0",
             "IO::Handle" : "0",
             "IPC::Open3" : "0",
             "Pod::Coverage::TrustPod" : "0",
-            "Test::CPAN::Changes" : "0.4",
-            "Test::CheckManifest" : "1.29",
-            "Test::Kwalitee" : "1.22",
+            "Test::Kwalitee" : "1.21",
             "Test::More" : "0.88",
             "Test::Pod" : "1.41",
             "Test::Pod::Coverage" : "1.08",
-            "Test::Pod::Spelling::CommonMistakes" : "1.000",
             "Test::Spelling" : "0.12",
-            "Test::TrailingSpace" : "0",
             "Test::Version" : "1"
          }
       },
       "runtime" : {
          "requires" : {
             "Carp" : "0",
-            "Exporter" : "5.57",
-            "File::Spec" : "0",
+            "Exporter" : "0",
             "FileHandle" : "0",
             "IO::File" : "0",
             "IO::Handle" : "0",
             "Symbol" : "0",
             "overload" : "0",
-            "parent" : "0",
-            "perl" : "5.008",
+            "perl" : "5.006",
             "strict" : "0",
             "warnings" : "0"
          }
@@ -75,17 +63,9 @@
          },
          "requires" : {
             "ExtUtils::MakeMaker" : "0",
-            "File::Basename" : "0",
             "File::Spec" : "0",
             "File::Temp" : "0",
-            "FileHandle" : "0",
-            "IO::File" : "0",
-            "IO::Handle" : "0",
-            "Symbol" : "0",
-            "Test::More" : "0.88",
-            "Test::Tester" : "0",
-            "strict" : "0",
-            "warnings" : "0"
+            "Test::More" : "0"
          }
       }
    },
@@ -138,10 +118,11 @@
    "version" : "2.114",
    "x_contributors" : [
       "Chase Whitener <capoeirab@cpan.org>",
-      "Dianne Skoll <dskoll@cpan.org>"
+      "Dianne Skoll <dskoll@cpan.org>",
+      "Graham Knop <haarg@haarg.org>"
    ],
-   "x_generated_by_perl" : "v5.30.0",
-   "x_serialization_backend" : "Cpanel::JSON::XS version 4.27",
+   "x_generated_by_perl" : "v5.32.1",
+   "x_serialization_backend" : "Cpanel::JSON::XS version 4.25",
    "x_spdx_expression" : "Artistic-1.0-Perl OR GPL-1.0-or-later"
 }
 
