@@ -14,7 +14,7 @@ location = root
 plugin = Markdown_Readme
 
 [@Starter::Git]
-revision = 4
+revision = 5
 managed_versions = 1
 installer = MakeMaker::Awesome
 RewriteVersion.global = 1
