@@ -3,7 +3,7 @@
 use strict;
 use warnings;
 
-# This test was generated by Dist::Zilla::Plugin::Test::ReportPrereqs 0.028
+# This test was generated by Dist::Zilla::Plugin::Test::ReportPrereqs 0.029
 
 use Test::More tests => 1;
 
@@ -109,19 +109,23 @@ for my $phase ( qw(configure build test runtime develop other) ) {
         my @reports = [qw/Module Want Have/];
 
         for my $mod ( sort keys %{ $req_hash->{$phase}{$type} } ) {
-            next if $mod eq 'perl';
             next if grep { $_ eq $mod } @exclude;
-
-            my $file = $mod;
-            $file =~ s{::}{/}g;
-            $file .= ".pm";
-            my ($prefix) = grep { -e File::Spec->catfile($_, $file) } @INC;
 
             my $want = $req_hash->{$phase}{$type}{$mod};
             $want = "undef" unless defined $want;
             $want = "any" if !$want && $want == 0;
 
+            if ($mod eq 'perl') {
+                push @reports, ['perl', $want, $]];
+                next;
+            }
+
             my $req_string = $want eq 'any' ? 'any version required' : "version '$want' required";
+
+            my $file = $mod;
+            $file =~ s{::}{/}g;
+            $file .= ".pm";
+            my ($prefix) = grep { -e File::Spec->catfile($_, $file) } @INC;
 
             if ($prefix) {
                 my $have = MM->parse_version( File::Spec->catfile($prefix, $file) );
