@@ -2,6 +2,9 @@ Revision history  {{$dist->name}}
 
 {{$NEXT}}
   - Move to Starter::Git revision 5
+  - Remove some duplicated test prereqs (thanks, haarg)
+  - Use @ISA instead of parent to make 5.6 workable (thanks, haarg)
+  - Reduce Perl required version to 5.6 (thanks, haarg)
 
 2.113     2020-01-16
   - Get rid of use of Common and TBone in all tests
